<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/listview">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/imageview_string" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textstring01"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_title_material_toolbar"
        android:textColor="#ffff7dc8" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_btn01"
        android:id="@+id/listview_btn01"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_btn02"
        android:id="@+id/listview_btn02"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_btn03"
        android:id="@+id/listview_btn03"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_btn04"
        android:id="@+id/listview_btn04"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_title_material" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/listview_btn05"
        android:id="@+id/listview_btn05"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/abc_text_size_title_material" />
</LinearLayout>
